Fix custom CSS not being applied to scrollbars in night mode (#1525)

--- a/qt/aqt/data/web/css/webview.scss
+++ b/qt/aqt/data/web/css/webview.scss
@@ -33,6 +33,6 @@ h1 {
     margin-bottom: 0.2em;
 }
 
-.nightMode {
+.night-mode {
     @include scrollbar.night-mode;
 }
